fixed bleeding glitch when moving stamp

--- a/client/src/app/components/tools/stamp-attributes/stamp-attributes.component.scss
+++ b/client/src/app/components/tools/stamp-attributes/stamp-attributes.component.scss
@@ -7,3 +7,7 @@
 .toolName {
     margin: 5px;
 }
+
+#patterns label {
+    margin: 0 10px 0 10px;
+}
